changing naming scheme for table objects

--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <properties>
+            <slf4jVersion>1.7.25</slf4jVersion>
+            <hikariCPVersion>3.1.0</hikariCPVersion>
+            <slf4jNOPVersion>1.7.25</slf4jNOPVersion>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>${slf4jNOPVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>${hikariCPVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4jVersion}</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -15,12 +37,12 @@
         </plugins>
     </build>
 
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
     <artifactId>TeamSynk</artifactId>
     <version>1.0-SNAPSHOT</version>
-
 
     
 </project>
