--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
             <slf4jVersion>1.7.25</slf4jVersion>
             <hikariCPVersion>3.1.0</hikariCPVersion>
             <slf4jNOPVersion>1.7.25</slf4jNOPVersion>
+            <mysqlConnectorVersion>8.0.13</mysqlConnectorVersion>
     </properties>
     <dependencies>
         <dependency>
@@ -22,6 +23,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4jVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysqlConnectorVersion}</version>
         </dependency>
     </dependencies>
     <build>
