--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,14 @@
             <artifactId>jfoenix</artifactId>
             <version>8.0.7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.3.2</version>
+            <scope>test</scope>
+        </dependency>
+
 
 
     </dependencies>
